Better support for nested prototypes